feat: recurso de realizar uma venda concluido.
